
We Aug 23 09:32:14 CEST 2006

	- Replaced double-quote-fix with a hopefully better version.
	- Use initializer string length as size for character strings.
	- Added ecpg_config.h file that is created via configure.

Th Aug 24 11:53:29 CEST 2006

	- Fixed of by one variable size.
	- Synced parser.

Su Aug 27 17:54:36 CEST 2006

	- Enabled single-quoted connection targets.
	- Fixed a memory leak/segfault in unsuccessful connection.

Tu Aug 29 14:21:31 CEST 2006

	- Fixed parser and library to allow empty database names.
	- Streamlined connection name parsing.

Su Sep 3 14:21:29 CEST 2006

	- Synced parser.
	- Added another regression test and fixed tcp test.

Tu Sep 5 11:49:08 CEST 2006

	- Synced parser.
	- Fixed ecpglib trying to read one character after end-of-string.
	- Fixed port number setting in regression suite.
	- Added some interval checks to regression suite.
	- Started to cleanup complex tests.

Th Sep 14 09:47:03 CEST 2006

	- Completely removed complex tests.
	- Added missing constuctor/destructor for interval and date.

We Nov 8 10:53:42 CET 2006

	- Applied patch by Peter Harris to free auto_mem struct in ECPGconnect.
	- Set ecpg library version to 5.2.
	- Set ecpg version to 4.2.1.

Th Jan 25 17:17:01 CET 2007

	- Removed compiler warning due to unneeded unsigned declaration.
	- Removed regression test that triggers those libc precision bugs on some archs.

Fr Feb 2 09:53:48 CET 2007

	- Cleaned up va_list handling. Hopefully this now works on all archs.
	- Applied Magnus Hagander's patch to take away some compiler warnings.

Su Feb 11 16:09:31 CET 2007

	- Fixed multibyte handling as reported by <harada.toshi@oss.ntt.co.jp>.
	- Set ecpg library version to 5.3.

Th Mar 15 08:27:53 CET 2007

	- Made some chars const as proposed by Stefan Huehner <stefan@huehner.org>.
	- Synced parser and keyword lists.
	- Copied two token parsing from backend parser to ecpg parser.
	- Also added a test case for this.
	- Set ecpg version to 4.3.1.