@@ -11,3 +11,7 @@
    (--enable-integer-datetimes) */
 #undef USE_INTEGER_DATETIMES
 
+/* Define to 1 to build client libraries as thread-safe code.
+ *    (--enable-thread-safety) */
+#undef ENABLE_THREAD_SAFETY
+
